crates/rune-cli/tests/snapshots/init__seeding_a_manifest_that_already_calls_rune_writes_no_command_that_calls_rune.snap
---
source: crates/rune-cli/tests/init.rs
description: "a manifest whose every script already calls rune: sixteen naming themselves, four naming something else"
expression: generated
---
// Scripts for this repository, taken from package.json one for one. Every package runs
// them with `rune run <name>`.
//
// Where several of these repeat the same command, keep one and let the others `extends`
// it. That duplication is what rune exists to remove.
//
// These package.json scripts did nothing but call rune under their own name, so rune
// already manages them and they are not repeated here:
//
//   build, build:apps, build:packages, check, ci, dev, dev:api, dev:packages, dev:web,
//   lint, lint:fix, smoke, start, test, test:coverage, test:watch
//
// The scripts above stand for these names, and nothing here defines them. Add them, or
// check the config they already live in:
//
//   clean:all, format:fix, typecheck:all
//
// A script runs a `command` of its own, `extends` another one and adds to it, or runs
// several others in `serial` or in `parallel`:
//
//   build:    { command: "tsc -b" }
//   build:ci: { extends: "build", appendArgs: ["--force"] }
//   ci:       { serial: ["lint", "build:ci", "test"] }
//   dev:      { parallel: ["dev:api", "dev:web"] }
//
// A group stops at the first member that fails and exits with that member's code; add
// `continueOnError: true` to run the rest anyway. `dependsOn` puts other scripts before
// a command of its own:
//
//   build: { command: "tsc -b", dependsOn: ["clean"] }
//
// A `command` may instead name one per operating system, with a `default` for the rest:
//
//   clean: { command: { default: "rm -rf dist", win32: "rmdir /s /q dist" } }
//
// Any script may add `description`, `cwd`, `env` and `envFile`.
//
// This file is TypeScript: variables, template strings and relative imports all work.
// Node globals are not available. To branch on the machine or the environment, import
// what rune supplies:
//
//   import { rune } from "@gio-labs/rune";
//
//   test: { command: rune.isCI ? "vitest --run" : "vitest" }
//
// That gives `rune.env`, `rune.platform` and `rune.isCI`.

export default {
  scripts: {
    clean: {
      extends: "clean:all",
    },
    format: {
      extends: "format:fix",
    },
    "format:check": {
      extends: "format",
    },
    typecheck: {
      extends: "typecheck:all",
    },
  },
};
