crates/rune-cli/tests/snapshots/init__seeding_that_runs_out_of_filesystem_says_so_and_claims_no_repository.snap
---
source: crates/rune-cli/tests/init.rs
description: seeding where no repository and no manifest sit above
expression: "redact(test.dir(), &reported)"
---
no package.json found

searched upward from [TMP] and reached the top of the filesystem without finding a project.

change into your project and run this again, or write a config here without seeding:

  rune init
