crates/rune-cli/tests/snapshots/init__seeding_turns_every_npm_script_into_a_command_script.snap
---
source: crates/rune-cli/tests/init.rs
description: "three npm scripts: a plain one, a name that is not an identifier, and a command carrying quotes"
expression: generated
---
// Scripts for this repository, taken from package.json one for one. Every package runs
// them with `rune run <name>`.
//
// Where several of these repeat the same command, keep one and let the others `extends`
// it. That duplication is what rune exists to remove.
//
// A script runs a `command` of its own, `extends` another one and adds to it, or runs
// several others in `serial`:
//
//   build:    { command: "tsc -b" }
//   build:ci: { extends: "build", appendArgs: ["--force"] }
//   ci:       { serial: ["lint", "build:ci", "test"] }
//
// A group stops at the first member that fails and exits with that member's code; add
// `continueOnError: true` to run the rest anyway. `dependsOn` puts other scripts before
// a command of its own:
//
//   build: { command: "tsc -b", dependsOn: ["clean"] }
//
// A `command` may instead name one per operating system, with a `default` for the rest:
//
//   clean: { command: { default: "rm -rf dist", win32: "rmdir /s /q dist" } }
//
// Any script may add `description`, `cwd`, `env` and `envFile`.
//
// This file is TypeScript: variables, template strings and relative imports all work.
// `rune.env`, `rune.platform` and `rune.isCI` are available. Node globals are not.

export default {
  scripts: {
    build: {
      command: "tsc -b",
    },
    lint: {
      command: "eslint \"src/**/*.ts\"",
    },
    "test:ci": {
      command: "vitest run --reporter=dot",
    },
  },
};
